updated api url

--- a/src/verifyEmailTemplate.html
+++ b/src/verifyEmailTemplate.html
@@ -12,7 +12,7 @@
         </p>
         <p>
           Please {##click link##} to confirm is your email address where you will receive
-          latest news from our platform. 
+          latest news from us.
         </p>
       </div>
       <hr>
