--- a/src/verifyEmailTemplate.html
+++ b/src/verifyEmailTemplate.html
@@ -14,6 +14,8 @@
           Please {##click link##} to confirm is your email address where you will receive
           latest news from us.
         </p>
+        <div>&nbsp;</div>
+        <small style="color: red; font-family:'Courier New', Courier, monospace">* Please do not reply this email.</small>
       </div>
       <hr>
       <div style="text-align: left; padding-top: 15px; font-size: 12px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
